--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,29 +17,45 @@ jobs:
     # This workflow contains a single job called "build"
     build:
         # This job will run on ubuntu virtual machine
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
 
         # Steps represent a sequence of tasks that will be executed as part of the job
         steps:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-            - uses: actions/checkout@v2
-            - uses: actions/setup-java@v1
-              with:
-                  java-version: '12.x'
+            - name: Checkout Branch
+              uses: actions/checkout@v2
 
-            - uses: subosito/flutter-action@v1
+            - name: Cancel Previous Builds
+              uses: n1hility/cancel-previous-runs@v2
               with:
-                  channel: 'stable'
+                  token: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Setup Java Action
+              uses: actions/setup-java@v1
+              with:
+                  java-version: "12.x"
+
+            - name: Setup Flutter Action
+              uses: subosito/flutter-action@v1
+              with:
+                  channel: "stable"
 
             # Get flutter dependencies.
-            - run: flutter pub get
+            - name: Get Dependencies
+              run: flutter pub get
+
+            # Clean dependencies.
+            - name: Clean Dependencies
+              run: flutter clean
 
             # Statically analyze the Dart code for any errors.
-            - run: flutter analyze .
+            - name: Analyze for Dart Errors
+              run: flutter analyze .
 
             # TODO: Once tests are created, uncomment this
             # # Run widget tests for our flutter project.
             # - run: flutter test
 
             # Build for Android
-            - run: flutter build apk
+            - name: Build for Android
+              run: flutter build apk
