--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
     webview_flutter: ^2.0.8
     # for maps inside flutter apps
     flutter_map: ^0.13.1
+    flutter_map_location: ^0.12.0
+    
     # Location paired with maps
     location: ^4.2.0
 
