--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutterinit",
-    "short_name": "flutterinit",
+    "name": "mapwatch",
+    "short_name": "mapwatch",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
