--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
     # for maps inside flutter apps
     flutter_map: ^0.13.1
     flutter_map_location: ^0.12.0
-    
+
     # Location paired with maps
     location: ^4.2.0
 
@@ -50,6 +50,12 @@ dependencies:
 
     # For navigation bar
     animated_bottom_navigation_bar: ^0.3.2
+
+    # Firebase-related
+    firebase_core: ^1.3.0
+
+    # Loading spinner
+    flutter_spinkit: ^5.0.0
 
 dev_dependencies:
     flutter_test:
@@ -74,7 +80,7 @@ flutter:
 
     # For details regarding adding assets from package dependencies, see
     # https://flutter.dev/assets-and-images/#from-packages
-
+    
     # To add custom fonts to your application, add a fonts section here,
     # in this "flutter" section. Each entry in this list should have a
     # "family" key with the font family name, and a "fonts" key with a
