--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,8 @@ dependencies:
 
     # Firebase-related
     firebase_core: ^1.3.0
-
+    cloud_firestore: "^2.2.2"
+    
     # Loading spinner
     flutter_spinkit: ^5.0.0
 
@@ -80,7 +81,7 @@ flutter:
 
     # For details regarding adding assets from package dependencies, see
     # https://flutter.dev/assets-and-images/#from-packages
-    
+
     # To add custom fonts to your application, add a fonts section here,
     # in this "flutter" section. Each entry in this list should have a
     # "family" key with the font family name, and a "fonts" key with a
