--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
     # for maps inside flutter apps
     flutter_map: ^0.13.1
     flutter_map_location: ^0.12.0
-    
+
     # Location paired with maps
     location: ^4.2.0
 
@@ -50,6 +50,13 @@ dependencies:
 
     # For navigation bar
     animated_bottom_navigation_bar: ^0.3.2
+
+    # Firebase-related
+    firebase_core: ^1.3.0
+    cloud_firestore: "^2.2.2"
+    
+    # Loading spinner
+    flutter_spinkit: ^5.0.0
 
 dev_dependencies:
     flutter_test:
