--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
     # Loading spinner
     flutter_spinkit: ^5.0.0
 
+    # For SVG files
+    flutter_svg: ^0.22.0
+
 dev_dependencies:
     flutter_test:
         sdk: flutter
@@ -73,8 +76,8 @@ flutter:
     uses-material-design: true
 
     # To add assets to your application, add an assets section, like this:
-    # assets:
-    #     - images/
+    assets:
+        - images/
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware.
